<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_step_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/ingredients"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-bold"/>

        <TextView
            android:id="@+id/recipe_step_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            tools:text="@string/lorem_ipsum"
            android:fontFamily="sans-serif"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/steps"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-bold"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipe_step_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>