<resources>
    <string name="app_name">EasyBaking</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="restart">Restart</string>

    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="step">Step</string>
    <string name="next_step">Next Step</string>
    <string name="prev_step">Previous Step</string>
    <string name="add_widget">Add To Widget</string>
    <string name="remove_widget">Remove From Widget</string>

    <string name="empty_view_text">No recipe is added to widget yet!</string>

    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\\n\\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
</resources>
