...
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <Button
            android:id="@+id/step_detail_prev"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/prev_step"
            android:fontFamily="sans-serif"/>

        <Button
            android:id="@+id/step_detail_next"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next_step"
            android:fontFamily="sans-serif"/>

...
